eval Notebook updates

--- a/human_eval_out_of_ten.ipynb
+++ b/human_eval_out_of_ten.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,8 @@
     "from datasets import Dataset\n",
     "from pprint import pprint\n",
     "import random\n",
-    "from IPython.display import clear_output"
+    "from IPython.display import clear_output\n",
+    "import time"
    ]
   },
   {
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -201,49 +202,37 @@
      "text": [
       "Rate each of the following responses to the input prompt out of ten.\n",
       "Instruction: \n",
-      "('Provide Practical Advice: Offer actionable, concrete advice and strategies '\n",
-      " 'for using NoSQL technologies effectively, drawing on industry best '\n",
-      " 'practices.')\n",
+      "'Explain any Caveats or Cautions noted in the Article.'\n",
       "Context:\n",
-      "('NoSQL technologies like Cassandra are powerful tools for fullstack '\n",
-      " 'development. In the context of DataStax Astra, a free-tier Cassandra '\n",
-      " 'database, developers can create applications that interact with the database '\n",
-      " 'from the frontend. A practical example is the React To-Do application that '\n",
-      " 'can be deployed to Netlify with minimal effort. To start utilizing NoSQL '\n",
-      " 'effectively with Cassandra and Astra, developers can follow these steps: 1. '\n",
-      " 'Create a DataStax Astra account and free-tier Cassandra database. 2. Clone '\n",
-      " 'the repository, install Node dependencies, and populate environment '\n",
-      " 'variables. 3. Build the app and run it locally on http://localhost:8080. 4. '\n",
-      " 'Alternatively, use Gitpod to streamline the setup process by setting Astra '\n",
-      " 'database details in the Gitpod terminal. 5. For production deployment, '\n",
-      " 'leverage Netlify by connecting the GitHub account, filling in environment '\n",
-      " 'variables, and deploying the app. By following these steps, developers can '\n",
-      " 'harness the capabilities of NoSQL technologies like Cassandra effectively.')\n",
+      "('Secondary Indexes in Cassandra can cause performance issues, especially if a '\n",
+      " 'query needs to access multiple nodes. They should only be used on columns or '\n",
+      " 'tables with low cardinality, no counters, infrequent updates, or without '\n",
+      " 'large partitions. Additionally, avoid using secondary indexes on high '\n",
+      " 'cardinality columns, tables that are frequently updated, or for ranged '\n",
+      " \"queries (> or <) due to limitations in Cassandra's indexing mechanism.\")\n",
       "\n",
       "\n",
       "                                                                   Response #1:                                                                     Response #2: \n",
       "                                                                                                                                                                 \n",
-      "                                                                                            When utilizing NoSQL technologies such as Cassandra, ensure to follow\n",
-      "                                                                ### INSTRUCTION:            these best practices: 1. Properly configure your DataStax Astra accou\n",
-      "          Provide Practical Advice: Offer actionable, concrete advice and strate           nt and Cassandra database for seamless integration. 2. Optimize your a\n",
-      "          gies for using NoSQL technologies effectively, drawing on industry bes           pplication's performance by building and running it locally using tool\n",
-      "                                                                    t practices.           s like Node.js and React. 3. Leverage Gitpod for efficient deployment \n",
-      "                                                                                           by pre-populating environment variables. 4. For production deployment,\n",
-      "                                                                                            consider using platforms like Netlify to streamline the process and c\n",
-      "                                                                                           onnect your GitHub account securely. Following these strategies will h\n",
-      "                                                                                           elp you effectively harness the power of NoSQL technologies like Cassa\n",
-      "                                                                                                                              ndra for your development projects.\n"
+      "                                                                                            When using Secondary Indexes in Cassandra, it's crucial to consider t\n",
+      "                                                                                           he cardinality of your columns, the update frequency of your tables, a\n",
+      "                                                                     ### Author:           nd the nature of your queries. Avoid using them on high cardinality co\n",
+      "                                                                                           lumns, frequently updated tables, or for ranged queries to prevent per\n",
+      "                                                                                                                     formance degradation or unexpected outcomes.\n",
+      "                                                                      ### Links:                                                                                 \n",
+      "                                                                                                                                                                 \n",
+      "                                                                                                                                                                 \n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m print_two_columns(responses[\u001b[39m0\u001b[39m], responses[\u001b[39m1\u001b[39m], \u001b[39m70\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m row_result \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mPlease enter your ratings as two numbers separated by a comma.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m row_result \u001b[39m=\u001b[39m [\u001b[39mint\u001b[39;49m(rating) \u001b[39mfor\u001b[39;00m rating \u001b[39min\u001b[39;00m row_result\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m)]\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m original_rating \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m fine_tuned_rating \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m print_two_columns(responses[\u001b[39m0\u001b[39m], responses[\u001b[39m1\u001b[39m], \u001b[39m70\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m time\u001b[39m.\u001b[39;49msleep(\u001b[39m5\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m row_result \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mPlease enter your ratings as two numbers separated by a comma.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m row_result \u001b[39m=\u001b[39m [\u001b[39mint\u001b[39m(rating) \u001b[39mfor\u001b[39;00m rating \u001b[39min\u001b[39;00m row_result\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m)]\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -263,6 +252,7 @@
     "    pprint(row['input'])\n",
     "    print(\"\\n\")\n",
     "    print_two_columns(responses[0], responses[1], 70)\n",
+    "    time.sleep(1)\n",
     "    row_result = input(\"Please enter your ratings as two numbers separated by a comma.\")\n",
     "    row_result = [int(rating) for rating in row_result.split(\",\")]\n",
     "    original_rating = 0\n",
@@ -281,7 +271,8 @@
     "    }\n",
     "\n",
     "    eval_responses.append(output_line)\n",
-    "    break\n",
+    "    clear_output(wait=True)\n",
+    "\n",
     "with open(user_name+'_eval_out_of_ten.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(eval_responses, f, ensure_ascii=False, indent=4)\n",
     "\n",
