dot and space separators for human eval

--- a/human_eval_out_of_ten.ipynb
+++ b/human_eval_out_of_ten.ipynb
@@ -254,7 +254,12 @@
     "    print_two_columns(responses[0], responses[1], 70)\n",
     "    time.sleep(1)\n",
     "    row_result = input(\"Please enter your ratings as two numbers separated by a comma.\")\n",
-    "    row_result = [int(rating) for rating in row_result.split(\",\")]\n",
+    "    if \",\" in row_result:\n",
+    "        row_result = [int(rating) for rating in row_result.split(\",\")]\n",
+    "    if \".\" in row_result:\n",
+    "        row_result = [int(rating) for rating in row_result.split(\".\")]\n",
+    "    if \" \" in row_result:\n",
+    "        row_result = [int(rating) for rating in row_result.split(\" \")]\n",
     "    original_rating = 0\n",
     "    fine_tuned_rating = 0\n",
     "    if order == 0:\n",
