Response column name update

--- a/human_eval_out_of_ten.ipynb
+++ b/human_eval_out_of_ten.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
       "Requirement already satisfied: python-dateutil>=2.8.2 in /home/gitpod/.pyenv/versions/3.12.2/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in /workspace/.pyenv_mirror/user/current/lib/python3.12/site-packages (from pandas) (2024.1)\n",
       "Requirement already satisfied: tzdata>=2022.7 in /workspace/.pyenv_mirror/user/current/lib/python3.12/site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: filelock in /home/gitpod/.pyenv/versions/3.12.2/lib/python3.12/site-packages (from datasets) (3.13.1)\n",
+      "Requirement already satisfied: filelock in /home/gitpod/.pyenv/versions/3.12.2/lib/python3.12/site-packages (from datasets) (3.13.3)\n",
       "Requirement already satisfied: pyarrow>=12.0.0 in /workspace/.pyenv_mirror/user/current/lib/python3.12/site-packages (from datasets) (15.0.2)\n",
       "Requirement already satisfied: pyarrow-hotfix in /workspace/.pyenv_mirror/user/current/lib/python3.12/site-packages (from datasets) (0.6)\n",
       "Requirement already satisfied: dill<0.3.9,>=0.3.0 in /home/gitpod/.pyenv/versions/3.12.2/lib/python3.12/site-packages (from datasets) (0.3.8)\n",
@@ -42,7 +42,7 @@
       "Requirement already satisfied: yarl<2.0,>=1.0 in /workspace/.pyenv_mirror/user/current/lib/python3.12/site-packages (from aiohttp->datasets) (1.9.4)\n",
       "Requirement already satisfied: anyio in /home/gitpod/.pyenv/versions/3.12.2/lib/python3.12/site-packages (from httpx<1,>=0.25.2->httpx[http2]<1,>=0.25.2->astrapy) (4.3.0)\n",
       "Requirement already satisfied: certifi in /home/gitpod/.pyenv/versions/3.12.2/lib/python3.12/site-packages (from httpx<1,>=0.25.2->httpx[http2]<1,>=0.25.2->astrapy) (2024.2.2)\n",
-      "Requirement already satisfied: httpcore==1.* in /home/gitpod/.pyenv/versions/3.12.2/lib/python3.12/site-packages (from httpx<1,>=0.25.2->httpx[http2]<1,>=0.25.2->astrapy) (1.0.4)\n",
+      "Requirement already satisfied: httpcore==1.* in /home/gitpod/.pyenv/versions/3.12.2/lib/python3.12/site-packages (from httpx<1,>=0.25.2->httpx[http2]<1,>=0.25.2->astrapy) (1.0.5)\n",
       "Requirement already satisfied: idna in /home/gitpod/.pyenv/versions/3.12.2/lib/python3.12/site-packages (from httpx<1,>=0.25.2->httpx[http2]<1,>=0.25.2->astrapy) (3.6)\n",
       "Requirement already satisfied: sniffio in /home/gitpod/.pyenv/versions/3.12.2/lib/python3.12/site-packages (from httpx<1,>=0.25.2->httpx[http2]<1,>=0.25.2->astrapy) (1.3.1)\n",
       "Requirement already satisfied: h11<0.15,>=0.13 in /home/gitpod/.pyenv/versions/3.12.2/lib/python3.12/site-packages (from httpcore==1.*->httpx<1,>=0.25.2->httpx[http2]<1,>=0.25.2->astrapy) (0.14.0)\n",
@@ -65,9 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspace/.pyenv_mirror/user/current/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "from astrapy.db import AstraDBCollection, AstraDB\n",
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,22 +108,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Filter: 100%|██████████| 500/500 [00:00<00:00, 54160.58 examples/s]\n",
-      "Flattening the indices: 100%|██████████| 100/100 [00:00<00:00, 21568.98 examples/s]\n"
+      "Filter: 100%|██████████| 500/500 [00:00<00:00, 61528.93 examples/s]\n",
+      "Flattening the indices: 100%|██████████| 100/100 [00:00<00:00, 22233.26 examples/s]\n"
      ]
     }
    ],
    "source": [
     "nextPageState = \"\"\n",
     "raw_dataset = []\n",
-    "expected_columns = ['_id','instruction', 'input', 'output', 'original_response', 'fine_tuned_response']\n",
+    "expected_columns = ['_id','instruction', 'input', 'output', 'original_llm_response', 'fine_tuned_llm_response']\n",
     "\n",
     "def check_expected_columns(raw_instruction):\n",
     "  if all(column in raw_instruction for column in expected_columns):\n",
@@ -242,9 +251,9 @@
     "for row in shuffled_dataset:\n",
     "    order = random.randint(0,1)\n",
     "    if order == 0:\n",
-    "        responses = [\"Response #1: \\n\"+row['original_response'], \"Response #2: \\n\"+row['fine_tuned_response']]\n",
+    "        responses = [\"Response #1: \\n\"+row['original_llm_response'], \"Response #2: \\n\"+row['fine_tuned_response']]\n",
     "    else:\n",
-    "        responses = [\"Response #1: \\n\"+row['fine_tuned_response'], \"Response #2: \\n\"+row['original_response']]\n",
+    "        responses = [\"Response #1: \\n\"+row['fine_tuned_llm_response'], \"Response #2: \\n\"+row['original_response']]\n",
     "    print(\"Rate each of the following responses to the input prompt out of ten.\")\n",
     "    print(\"Instruction: \")\n",
     "    pprint(row['instruction'])\n",
