Human Eval column fix

--- a/human_eval_out_of_ten.ipynb
+++ b/human_eval_out_of_ten.ipynb
@@ -115,8 +115,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Filter: 100%|██████████| 500/500 [00:00<00:00, 61528.93 examples/s]\n",
-      "Flattening the indices: 100%|██████████| 100/100 [00:00<00:00, 22233.26 examples/s]\n"
+      "Filter: 100%|██████████| 95/95 [00:00<00:00, 20759.55 examples/s]\n",
+      "Flattening the indices: 100%|██████████| 95/95 [00:00<00:00, 18417.33 examples/s]\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,37 +211,50 @@
      "text": [
       "Rate each of the following responses to the input prompt out of ten.\n",
       "Instruction: \n",
-      "'Explain any Caveats or Cautions noted in the Article.'\n",
+      "('Explain the features of NoSQL technologies, particularly focusing on '\n",
+      " \"Cassandra's architecture and benefits.\")\n",
       "Context:\n",
-      "('Secondary Indexes in Cassandra can cause performance issues, especially if a '\n",
-      " 'query needs to access multiple nodes. They should only be used on columns or '\n",
-      " 'tables with low cardinality, no counters, infrequent updates, or without '\n",
-      " 'large partitions. Additionally, avoid using secondary indexes on high '\n",
-      " 'cardinality columns, tables that are frequently updated, or for ranged '\n",
-      " \"queries (> or <) due to limitations in Cassandra's indexing mechanism.\")\n",
+      "('NoSQL databases like Apache Cassandra are optimized for modern data '\n",
+      " 'applications that require large data volume, low latency, and flexible data '\n",
+      " 'models. Cassandra is an obvious choice with its high throughput and ability '\n",
+      " 'to support globally distributed and always-on apps. In addition, Apache '\n",
+      " 'Pulsar is highlighted as an advanced, open-source streaming and messaging '\n",
+      " 'technology ideal for handling real-time data. Finally, Stargate, an '\n",
+      " 'open-source data API layer, empowers developers to build apps with freedom '\n",
+      " 'of choice and without operational distractions.')\n",
       "\n",
       "\n",
       "                                                                   Response #1:                                                                     Response #2: \n",
       "                                                                                                                                                                 \n",
-      "                                                                                            When using Secondary Indexes in Cassandra, it's crucial to consider t\n",
-      "                                                                                           he cardinality of your columns, the update frequency of your tables, a\n",
-      "                                                                     ### Author:           nd the nature of your queries. Avoid using them on high cardinality co\n",
-      "                                                                                           lumns, frequently updated tables, or for ranged queries to prevent per\n",
-      "                                                                                                                     formance degradation or unexpected outcomes.\n",
-      "                                                                      ### Links:                                                                                 \n",
+      "           Cassandra's architecture excels in handling massive data volumes with                                                                                 \n",
+      "           low latency, making it a preferred choice for modern data application                                                                                 \n",
+      "          s. Its ability to provide globally distributed and always-on capabilit                                                                  ### References:\n",
+      "          ies, along with scalability, positions Cassandra as a robust solution                                                                                  \n",
+      "          for real-time data processing. Pulsar, on the other hand, focuses on r                             1. [Apache Cassandra](https://cassandra.apache.org/)\n",
+      "          eal-time data streaming and messaging, offering high throughput and lo                                   2. [Apache Pulsar](https://pulsar.apache.org/)\n",
+      "          w latency, while Stargate serves as a versatile data API layer enablin                                      3. [Stargate](https://stargate.apache.org/)\n",
+      "                     g developers to work with various data systems effectively.                                                                                 \n",
       "                                                                                                                                                                 \n",
-      "                                                                                                                                                                 \n"
+      "                                                                                                                                                      ### Author:\n",
+      "                                                                                                                                                                 \n",
+      "                                                                                           [![GitHub Follow](https://img.shields.io/github/followers/mohamed-el-s\n",
+      "                                                                                                       hafie?style=social)](https://github.com/mohamed-el-shafie)\n",
+      "                                                                                                                                                                 \n",
+      "                                                                                           [![GitHub forks](https://img.shields.io/github/forks/mohamed-el-shafie\n",
+      "                                                                                                    ?style=social)](https://github.com/mohamed-el-shafie/answers)\n",
+      "                                                                                                                                                                 \n",
+      "                                                                                                                          [![GitHub stars](https://img.shields.io\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "IndexError",
+     "evalue": "string index out of range",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m print_two_columns(responses[\u001b[39m0\u001b[39m], responses[\u001b[39m1\u001b[39m], \u001b[39m70\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m time\u001b[39m.\u001b[39;49msleep(\u001b[39m5\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m row_result \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mPlease enter your ratings as two numbers separated by a comma.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://anant-llmfinetuningqlo-o3ytu9wmpiy.ws-us110.gitpod.io/workspace/llm-fine-tuning-qlora/human_eval_out_of_ten.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m row_result \u001b[39m=\u001b[39m [\u001b[39mint\u001b[39m(rating) \u001b[39mfor\u001b[39;00m rating \u001b[39min\u001b[39;00m row_result\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m)]\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 30\u001b[0m\n\u001b[1;32m     28\u001b[0m     fine_tuned_rating \u001b[39m=\u001b[39m row_result[\u001b[39m1\u001b[39m]\n\u001b[1;32m     29\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 30\u001b[0m     original_rating \u001b[39m=\u001b[39m row_result[\u001b[39m1\u001b[39;49m]\n\u001b[1;32m     31\u001b[0m     fine_tuned_rating \u001b[39m=\u001b[39m row_result[\u001b[39m0\u001b[39m]\n\u001b[1;32m     33\u001b[0m output_line \u001b[39m=\u001b[39m {\n\u001b[1;32m     34\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39m_id\u001b[39m\u001b[39m\"\u001b[39m: row[\u001b[39m'\u001b[39m\u001b[39m_id\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[1;32m     35\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39moriginal_rating\u001b[39m\u001b[39m\"\u001b[39m: original_rating,\n\u001b[1;32m     36\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mfine_tuned_rating\u001b[39m\u001b[39m\"\u001b[39m: fine_tuned_rating\n\u001b[1;32m     37\u001b[0m }\n",
+      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
      ]
     }
    ],
@@ -251,9 +264,9 @@
     "for row in shuffled_dataset:\n",
     "    order = random.randint(0,1)\n",
     "    if order == 0:\n",
-    "        responses = [\"Response #1: \\n\"+row['original_llm_response'], \"Response #2: \\n\"+row['fine_tuned_response']]\n",
+    "        responses = [\"Response #1: \\n\"+row['original_llm_response'], \"Response #2: \\n\"+row['fine_tuned_llm_response']]\n",
     "    else:\n",
-    "        responses = [\"Response #1: \\n\"+row['fine_tuned_llm_response'], \"Response #2: \\n\"+row['original_response']]\n",
+    "        responses = [\"Response #1: \\n\"+row['fine_tuned_llm_response'], \"Response #2: \\n\"+row['original_llm_response']]\n",
     "    print(\"Rate each of the following responses to the input prompt out of ten.\")\n",
     "    print(\"Instruction: \")\n",
     "    pprint(row['instruction'])\n",
